tests/baselines/reference/S7.8.5_A2.2_T2.errors.txt
S7.8.5_A2.2_T2.ts(22,1): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
S7.8.5_A2.2_T2.ts(22,5): error TS1109: Expression expected.


==== S7.8.5_A2.2_T2.ts (2 errors) ====
    // Copyright 2009 the Sputnik authors.  All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    esid: prod-RegularExpressionChar
    info: |
      RegularExpressionChar ::
        RegularExpressionNonTerminator but not one of \ or / or [
    
      RegularExpressionNonTerminator ::
        SourceCharacter but not LineTerminator
    
    description: >
      A regular expression may not contain a "/" as a SourceCharacter
    
    negative:
      phase: parse
      type: SyntaxError
    ---*/
    
    
    /a//.source;
    ~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
        ~
!!! error TS1109: Expression expected.
    